force-app/main/default/objects/Note__c/fields/Partner_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_User_Email__c</fullName>
    <label>Partner User Email</label>
    <type>Email</type>
</CustomField>