force-app/main/default/objects/Note__c/fields/Poster__c.field-meta.xml
<CustomField>
    <fullName>Poster__c</fullName>
    <description>Poster, either driva user or partner user</description>
    <formula>IF(ISNULL(Partner_User_Email__c) || ISBLANK(Partner_User_Email__c), HYPERLINK(&quot;/lightning/r/User/&quot;+CreatedById+&quot;/view&quot;, CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName) , HYPERLINK(&quot;lightning/r/Account/&quot;+Partner__c+&quot;/view&quot;, Partner__r.Name) + &quot; Email: &quot; + Partner_User_Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Poster</label>
    <type>Text</type>
</CustomField>