force-app/main/default/objects/Note__c/fields/Related_sub_status__c.field-meta.xml
<CustomField>
    <fullName>Related_sub_status__c</fullName>
    <label>Related sub-status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>