force-app/main/default/objects/Note__c/fields/User_Picklist__c.field-meta.xml
<CustomField>
    <fullName>User_Picklist__c</fullName>
    <description>This field is used for tagging agents in Custom Notes</description>
    <inlineHelpText>This field is used for tagging agents in Custom Notes</inlineHelpText>
    <label>User Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alexandra Lindsay-Black</fullName>
            </value>
            <value>
                <fullName>Amanda Finn</fullName>
            </value>
            <value>
                <fullName>Andrew Grapsas</fullName>
            </value>
            <value>
                <fullName>Aniket Sharma</fullName>
            </value>
            <value>
                <fullName>Anuj Seth</fullName>
            </value>
            <value>
                <fullName>Banke Pandit</fullName>
            </value>
            <value>
                <fullName>Boston Le</fullName>
            </value>
            <value>
                <fullName>Brock Dun</fullName>
            </value>
            <value>
                <fullName>Chanel Cruz</fullName>
            </value>
            <value>
                <fullName>Clinton Rabjohns</fullName>
            </value>
            <value>
                <fullName>Dina Heng</fullName>
            </value>
            <value>
                <fullName>Dinal Perera</fullName>
            </value>
            <value>
                <fullName>Driva ㅤ</fullName>
            </value>
            <value>
                <fullName>Edward Khoury</fullName>
            </value>
            <value>
                <fullName>Eric Chow</fullName>
            </value>
            <value>
                <fullName>Eugene Lee</fullName>
            </value>
            <value>
                <fullName>Faith Andrews</fullName>
            </value>
            <value>
                <fullName>Hagan Crossan</fullName>
            </value>
            <value>
                <fullName>Harry Annear</fullName>
            </value>
            <value>
                <fullName>Jessica Barillaro</fullName>
            </value>
            <value>
                <fullName>Joel Mansfield</fullName>
            </value>
            <value>
                <fullName>Kai Wultsch</fullName>
            </value>
            <value>
                <fullName>Lara Peake</fullName>
            </value>
            <value>
                <fullName>Lyly Luu</fullName>
            </value>
            <value>
                <fullName>Maddison Jones</fullName>
            </value>
            <value>
                <fullName>Madison Edwards</fullName>
            </value>
            <value>
                <fullName>Madison Flavel</fullName>
            </value>
            <value>
                <fullName>Matthew Moon</fullName>
            </value>
            <value>
                <fullName>Nithan Srinesa</fullName>
            </value>
            <value>
                <fullName>Phil McCourt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>